# opensoundscape

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  API_feedback.md  Dockerfile  LICENSE  README-orig.md  README.md  Singularity  debug_early_stopping.py  openbird.ini  opensoundscape.ini  opensoundscape.py  opensoundscape.yml  opensoundscape_tf.yml  pyproject.toml  requirements-dev.txt  requirements-singularity.txt  requirements.txt  test_early_stopping_manual.py  top-down-listening.ipynb
.github/workflows/: docker.yml  linter.yml  poetry.yml  run_tutorial_notebooks.sh  tutorial_notebooks.yml
annotations/: top-down-listening.ipynb
bmooreii-Lasseck2013/: .gitignore  README.md  Singularity  images.sh  nips4b.ini  nips4b_small.ini  openbird.ini  openbird.py  parallel_spect_gen.sh  requirements.txt  serser.ini  serser_small.ini  sylatr.ini  sylatr_small.ini
bmooreii-Lasseck2013/config/: openbird.ini
bmooreii-Lasseck2013/modules/: db_utils.py  image_utils.py  init.py  model_fit.py  predicition.py  predict.py  prediction.py  sampling.py  spect_gen.py  template_pool_gen.py  utils.py  view.py
bmooreii-Lasseck2013/scripts/: find_high_cross_correlations.py  find_important_templates.py  generate-images.sh  template_pool.csv
bmooreii-Lasseck2013/tests/: ini_test.ini  ini_test_change.ini  test_db_utils.py
config/: openbird.ini  opensoundscape.ini
doc/: conf.py  index.rst
docs/: Makefile  Overview.md  RIBBIT_pulse_rate_demo.ipynb  api.rst  audio_and_spectrogram.ipynb  conf.py  feat_new_train_defaults_review.md  index.rst  installation.rst  model_prediction_example.ipynb  model_train_example.ipynb  notebooks.rst  predict.ipynb  requirements.txt  spectrogram_example.ipynb  sphinx_linkcode.py  train.ipynb  tutorial.rst
docs/_static/: colorscheme.css  theme.css
docs/api/: annotations.rst  audio.rst  indices.rst  localization.rst  machine_learning.rst  miscellaneous.rst  modules.rst  preprocessing.rst  ribbit.rst  spectrogram.rst
docs/classifier_guide/: Intro.md  guide.md
docs/installation/: contributors.md  from_yml.md  google_colab.md  jupyter.md  mac_and_linux.md  windows.md
docs/intro/: pytorch_orientation.md  quick-start.md  resources.md
docs/source/: opensoundscape.localization.rst  opensoundscape.ml.rst  opensoundscape.preprocess.rst  opensoundscape.rst
docs/tutorials/: Localizer.ipynb  RIBBIT_pulse_rate_demo.ipynb  acoustic_localization.ipynb  adaptive_augmentation_demo.ipynb  annotation_tutorial.ipynb  annotations.ipynb  audio_and_spectrogram.ipynb  cnn.ipynb  cnn_training_advanced.ipynb  convert_mp3s.ipynb  customize_cnn_training.ipynb  gradcam.ipynb  hoplite_agile_modeling.ipynb  localization.ipynb  predict.ipynb  predict_with_a_cnn.ipynb  predict_with_cnn.ipynb  predict_with_pretrained_cnn.ipynb  preprocess_audio_dataset.ipynb  raven.ipynb  ruffed_grouse_detector.ipynb  signal_processing.ipynb  song_space_trial.ipynb  songspace_agile_modeling.ipynb  spectrogram.ipynb  synchronize_audiomoth_gps_recordings.py  train.ipynb  train_a_cnn.ipynb  train_cnn.ipynb  training_birdnet_and_perch.ipynb  training_with_lightning.ipynb  transfer_learning.ipynb  visualization.ipynb
feedback/: annotations.md  audio.md  spectrogram_signal.md
lightning_logs/version_0/: hparams.yaml
modules/: config_check.py  db_utils.py  image_utils.py  init.py  model_fit.py  predict.py  sampling.py  spect_gen.py  utils.py  view.py
notebooks/: RIBBIT_pulse_rate_demo.ipynb  augmentations.ipynb  pulse_finder_demo.ipynb  spectrogram_example.ipynb  test_pulse_finder.ipynb  train_model.ipynb
opensoundscape/: __init__.py  annotations.py  aru.py  audio.py  audio_tools.py  audiomoth.py  augmentations.ipynb  commands.py  completions.py  config.py  console.py  console_checks.py  data_selection.py  datasets.py  grad_cam.py  helpers.py  load.py  localization.py  logging.py  melspectrogram.py  metrics.py  preprocess.py  pulse_finder.py  pytorch_prediction.py  raven.py  ribbit.py  sample.py  sample_data.py  scipy_legacy_spectrogram.py  seed.py  signal.py  signal_processing.py  species_table.py  spectrogram.py  spectrogram_class.py  spectrogram_combo.py  taxa.py  transforms.py  utils.py  vector_database.py  (+2 more)
opensoundscape/audio/: load.py
opensoundscape/config/: checks.py  config.py
opensoundscape/configs/: default_train.yml
opensoundscape/init/: init.py
opensoundscape/localization/: __init__.py  audiomoth_sync.py  coordinates.py  localization_algorithms.py  msrp.py  position_estimate.py  spatial_event.py  synchronized_recorder_array.py
opensoundscape/ml/: __init__.py  base_model.py  bioacoustics_model_zoo.py  cam.py  cnn.py  cnn_architectures.py  dataloaders.py  datasets.py  export.py  lightning.py  loss.py  onnx_model.py  perch_model_for_hub.py  safe_dataset.py  sampling.py  schedulers.py  shallow_classifier.py  song_space.py  utils.py
opensoundscape/model_fit/: model_fit.py
opensoundscape/predict/: predict.py
opensoundscape/preprocess/: __init__.py  action_functions.py  actions.py  img_augment.py  io.py  overlay.py  preprocessors.py  tensor_augment.py  utils.py
opensoundscape/scripts/: generate_images.py  (+4 more)
output/: great_plains_toad.wav_prdf.csv  silence_10s.mp3_prdf.csv
resources/: species_table.csv
scripts/: dump_cross_correlations.py  find_high_cross_correlations.py  find_important_templates.py  generate-images.sh
tests/: ini_test.ini  ini_test_change.ini  input.csv  test_actions.py  test_annotations.py  test_aru.py  test_audio.py  test_audio_load.py  test_audio_tools.py  test_audiomoth.py  test_base_model.py  test_cam.py  test_cnn.py  test_cnn_architectures.py  test_cnn_utils.py  test_config.py  test_coordinates.py  test_data_selection.py  test_dataloaders.py  test_datasets.py  test_db_utils.py  test_export.py  test_helpers.py  test_img_augment.py  test_lightning.py  test_load.py  test_localization.py  test_logging.py  test_loss.py  test_melspectrogram.py  test_metrics.py  test_ml_utils.py  test_models_utils.py  test_moth.py  test_msrp.py  test_notebooks_run.py  test_onnx_model.py  test_preprocess_utils.py  test_preprocessors.py  test_pulse_finder.py  (+19 more)
(+75 files in other folders)
